# sak

./: .pre-commit-config.yaml  Cargo.toml  README.md  bench.sh  clippy.toml
.github/workflows/: ci.yml
docs/img/: paradigms.html
img/: paradigms.html
src/: deploy.rs  lib.rs  main.rs  progress.rs  proto.rs  server.rs  server_source.rs
tests/: README.md  import.rs  remote.rs  smoke.rs
