[package]
name = "sak"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.60", features = ["derive"] }
ignore = "0.4.25"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rustic_backend = "0.6.1"
rustic_core = "0.10.1"
tempfile = "3.23.0"
walkdir = "2.5.0"

[dev-dependencies]
flate2 = "1.1.5"
tar = "0.4.44"
