[package]
name = "sak"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.100"
bincode = "1"
bytesize = "2.3.0"
clap = { version = "4.5.60", features = ["derive"] }
crossbeam-channel = "0.5"
ignore = "0.4.25"
indicatif = "0.18.0"
jiff = "0.2"
log = "0.4.29"
nix = { version = "0.31", features = ["user"] }
opendal = { version = "0.55.0", features = ["blocking", "services-fs", "services-sftp", "layers-throttle"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rustic_backend = { git = "https://github.com/brege/rustic_core.git", rev = "84add30", package = "rustic_backend", features = ["clap"] }
rustic_core = { git = "https://github.com/brege/rustic_core.git", rev = "84add30", package = "rustic_core", features = ["clap"] }
simplelog = "0.12.2"
tempfile = "3.23.0"
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread"] }
toml = "0.8"
walkdir = "2.5.0"

[dev-dependencies]
flate2 = "1.1.5"
tar = "0.4.44"

[profile.dev]
incremental = false
debug = 1

[profile.test]
incremental = false
debug = 1
